Improve mention/displayer indexing and add unit tests
Signed-off-by: Jason Winning <jason.winning@gmail.com>